FIXED: inquire box. verticle img overflow, others

--- a/homepage.css
+++ b/homepage.css
@@ -91,7 +91,7 @@ img.homepage {
 .captionHome p {
     font-size: 13px;
 }
-@media screen and (min-width: 800px){
+@media screen and (min-width: 1024px){
 
     /* homepage */
     .background {
