--- a/portfolio.css
+++ b/portfolio.css
@@ -168,7 +168,7 @@ span.share {
     body#portfolio section>div:not(.curve) {
         grid-row: 1/3;
         display: grid;
-        grid-template-rows: calc(18 * var(--unit)) calc(4*var(--unit));
+        grid-template-rows: calc(18 * var(--unit)) calc(3*var(--unit));
         grid-row-gap: var(--unit);
     }
     .curve {
@@ -212,10 +212,9 @@ span.share {
     .inquire-form {
         background: white;
         z-index: 30;
-        border-bottom: 1px solid var(--medium-grey);
-        width: 72vw;
+        width: 86vw;
         height: 650px;
-        margin: 0 14vw;
+        margin: 0 7vw;
         position: fixed;
         opacity: 0;
     }
@@ -235,13 +234,13 @@ span.share {
         font-size: 50px;
         color: var(--dark-grey);
         position: absolute;
-        left: 50px;
+        right: 50px;
         top: 50px;
         cursor: pointer;
     }
     .sign {
         width: 50%;
-        padding: 150px 50px;
+        padding: 120px 50px;
     }
     .quote {
         font-size: 23px;
@@ -254,7 +253,7 @@ span.share {
         width: 50%;
         position: absolute;
         right: 0;
-        top: 50px;
+        top: 120px;
         padding: 0 50px;
         font-family: Sukhumvit-bold, sans-serif;
     }
@@ -267,8 +266,11 @@ span.share {
         height: 170px;
     }
     button.submit {
-        font-size: 40px;
-        border-bottom: 1px solid var(--medium-grey);
+        height: 50px;
+        width: 130px;
+        font-size: 23px;
+        border: 1px solid var(--medium-grey);
+        border-radius: 2px;
         margin-top: 30px;
         cursor: pointer;
     }
@@ -294,7 +296,7 @@ span.share {
     }
     .modal>span {
         position: absolute;
-        top: 30vw;
+        top: 25vw;
         font-size: 50px;
         font-family: simplifica, sans-serif;
     }
